--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 <!-- Contact form -->
 <div class="contact-form" id="contact">
 	<div class="container">
-		<form method="POST" action="mailer.php"> <!--important -->
+		<form method="POST" action="https://formspree.io/f/mbjpagvy"> <!--important -->
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12">
 				  <h1>Get in Touch</h1>	
